# synq-dbt-airflow

./: .gitignore  Dockerfile.airflow  Dockerfile.dbt  README.md  airflow_dbt_plugin_advanced_dags.py  airflow_dbt_plugin_compile_only.py  airflow_dbt_plugin_dags.py  airflow_dbt_plugin_no_artifacts.py  dbt.py  hello_world.py  install.sh  kubernetes_advanced_dags.py  kubernetes_basic.py  kubernetes_basic_dags.py  kubernetes_dags.py  values.yaml  values.yml
.github/workflows/: airflow_image.yaml  dbt-image.yaml
dbt_example/: .user.yml  profiles.yml  pyproject.toml
dbt_example/models/example/: my_first_dbt_model.sql  my_second_dbt_model.sql  schema.yml
