[tool.poetry]
name = "dbt_example"
version = "0.1.0"
description = ""
authors = ["Andraz Brodnik <brodul@brodul.org>"]

[tool.poetry.dependencies]
python = "^3.10"
dbt-postgres = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
